@@ -14,6 +14,7 @@ pod_spelling_system:
     - EV
     - PkgConfig
     - Wasm
+    - NewFangle
 
 pod_coverage:
   # format is "Class#method" or "Class", regex allowed
