@@ -53,6 +53,7 @@ Alien::help2man                                = 0.01
 Alien::Hunspell                                = 0.16
 Alien::Libarchive3                             = 0.29
 Alien::Libbz2                                  = 0.24
+Alien::libnewrelic                             = 0.02
 Alien::Librdkafka                              = 1.05
 Alien::LibreSSL                                = 0.03
 Alien::libuuid                                 = 0.02
@@ -111,6 +112,7 @@ Dist::Zilla::PluginBundle::Author::Plicease    = 2.45
 Env::ShellWords                                = 0.02
 Exception::Class::DBI                          = 1.04
 FFI                                            = 1.15
+FFI::C                                         = 0.08
 FFI::CheckLib                                  = 0.26
 FFI::ExtractSymbols                            = 0.03
 FFI::Platypus                                  = 1.11
@@ -121,6 +123,7 @@ FFI::Platypus::Lang::Pascal                    = 0.06
 FFI::Platypus::Lang::Rust                      = 0.09
 FFI::Platypus::Legacy::Raw                     = 0.06
 FFI::Platypus::Record::StringArray             = 0.01
+FFI::Platypus::Type::Enum                      = 0.03
 FFI::Platypus::Type::PtrObject                 = 0.02
 FFI::TinyCC                                    = 0.29
 FFI::TinyCC::Inline                            = 0.28
@@ -135,6 +138,7 @@ Log::Log4perl::Appender::TAP                   = 0.04
 Module::Build::FFI                             = 0.52
 Mojolicious::Plugin::Ident                     = 0.31
 Mojolicious::Plugin::TtRenderer                = 1.60
+NewFangle                                      = 0.01
 PeekPoke::FFI                                  = 0.02
 Perl::Critic::Plicease                         = 0.03
 Photography::DX                                = 0.02
